--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=sistemadereserva
+application.vendor=Edu
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +27,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/sistemadereserva.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-beanutils-1.8.2.jar=D:\\Sistema de reservas de habitacion\\Complementos\\Complementos\\Librer\u00edas JasperReports\\commons-beanutils-1.8.2.jar
 file.reference.commons-collections-3.2.1.jar=D:\\Sistema de reservas de habitacion\\Complementos\\Complementos\\Librer\u00edas JasperReports\\commons-collections-3.2.1.jar
